do not use javac internals